
  [ Faidon Liambotis ]
  * Add myself to Uploaders.
  * Update long description using upstream's latest verbiage.
  * Bump Standards-Version to 4.6.2, no changes needed.
  * Drop upstream patches:
    - test--skip-issue-17366, as the underlying issue was fixed upstream.
    - generate-crash, as it was unused, and a backport of a v4.0 commit.
  * debian/copyright:
    - Update to recent sources and remove obsolete entries and comments.
    - Remove remove stanzas for now un-vendored code.
    - Update debian/ copyright to latest authors
    - Use "podman" in Upstream-Name and Source, to reflect an upstream change.
  * debian/upstream/metadata:
    - Replace invalid "Homepage" field by Repository/Repository-Browse.
    - Add the Changelog field, pointing to the upstream release notes.
  * Update debian/watch to point to /tags rather than /releases, as GitHub's
    releases page now requires JavaScript.
  * Rename the builtin_tests autopkgtest name to builtin-tests, as underscores
    are invalid in test names (addresses illegal-runtime-test-name warning).
  * Add a debian/gbp.conf config file, allowing to use standardized
    git-buildpackage tools to update to newer versions.
  * Remove unused source-includes-file-in-files-excluded lintian override.

 -- Faidon Liambotis <paravoid@debian.org>  Tue, 05 Sep 2023 13:31:07 +0300

libpod (4.4.0+ds1-2) experimental; urgency=medium

  [ Norbert Lange ]
  * Build and install podman-remote, Closes: #1020540

 -- Reinhard Tartler <siretart@tauware.de>  Wed, 12 Apr 2023 07:07:55 -0400

libpod (4.4.0+ds1-1) experimental; urgency=medium

  * New upstream version
  * Disable failing test, cf. https://github.com/containers/podman/issues/17366
  * disable sigstore functionalty, will be reenabled when the packages enters
    Debian
  * bump dependency on containers/{image,common,buildah}

 -- Reinhard Tartler <siretart@tauware.de>  Sat, 04 Feb 2023 14:31:59 -0500

libpod (4.3.1+ds1-5) unstable; urgency=medium
